2001-01-13  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/compile/20001212-1.c: New test.

2001-01-13  Neil Booth  <neil@daikokuya.demon.co.uk>

        * gcc.dg/cpp/widestr1.c: Update.
        * gcc.dg/cpp/prag-imp.c: Remove.

2001-01-12  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/execute/20000801-3.x: Remove.
	* gcc.dg/c90-init-1.c: New test.
	* gcc.dg/c99-init-1.c: New test.
	* gcc.dg/c99-init-2.c: New test.
	* gcc.dg/gnu99-init-1.c: New test.

2001-01-12  Richard Earnshaw <rearnsha@arm.com>

	* lib/f-torture.exp (f_torture_compile): Prune the warnings before
	testing that no relevant ones were found.

2001-01-12  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/cast2.C: New test.

2001-01-12  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/friend47.C: New test.

2001-01-11  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/instantiate13.C: New test.

2001-01-11  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/defarg7.C: New test.
	* g++.old-deja/g++.other/defarg8.C: New test.

2001-01-11  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/crash64.C: New test.

2001-01-11  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/crash63.C: New test.

2001-01-11  Neil Booth  <neil@daikokuya.demon.co.uk>

	* gcc.dg/cpp/if-2.c: Add wide char test without sign extension.

2001-01-10  Alan Lehotsky  <lehotsky@tiac.net>

	* gcc.dg/20000926-1.c: Parameterize for machines with 16-bit ints.
	
2001-01-10  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/error3.C: New test.

2001-01-10  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/crash39.C: New test.

2001-01-10  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/vbase4.C: New test.

2001-01-08  Jonathan Larmour  <jlarmour@redhat.com>

	* gcc.dg/20000419-2.c: Move to "special" subdirectory.