@@ -1,3 +1,7 @@
+2001-01-13  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.c-torture/compile/20010113-1.c: New test.
+
 2001-01-13  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20001212-1.c: New test.
